--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "jimp": "^0.16.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
+    "nodemailer": "^6.10.0",
     "socket.io": "^4.8.1",
     "twilio": "^5.3.6"
   },
